--- a/k8s/14.md
+++ b/k8s/14.md
@@ -20,6 +20,8 @@ The command gives information about running pods, stateful sets, services, persi
 
 For example, With this command we are able to identify which pods are running or crashing, so the states services names, ports, etc.
 
+![cpu0](../screenshots/lab14-getpods.png)
+
 # CPU Usage
 
 ![cpu0](../screenshots/lab14-cpu0.png)
