--- a/k8s/13.md
+++ b/k8s/13.md
@@ -252,3 +252,9 @@ NOTES:
 # Delete pvc
 
 ![pvc](../screenshots/lab13-deletepvc.png)
+
+# Update strategies - Bonus
+
+There is the .spec.updateStrategy field which can be used to turn on and off automatic rolling updates (for examples when the container,label,resources limist are set for the statefulset). The default value for the updateStrategy is **RollinUpdate**. This means that it is an automated way to update the pods for a statefulset.
+
+On the other hand, one is able to set **.spec.updateStrategy** field to **OnDelete** value. That will mean that the updates will not be updated automatically. You have to delete the pods you want to update. This will make the controller to create new pods and then they will be updated.
