--- a/k8s/12.md
+++ b/k8s/12.md
@@ -1,3 +1,15 @@
 # Configmap
 
 ![helm_install](../screenshots/configmap.png)
+
+# StatefulSet
+
+- StatefulSet is a k8s controller which helps users to maintain the pods. It is different from other controllers (as for example from the Deployments) because it can manage stateful applications. A stateful application is the one which takes care about permanent storage, they might use Kafka, Redis - so to manage these ones StatefulSet is the controller which has to be used.
+
+# Headless service
+
+This is a service that does not use a specific IP in order to route upcoming requests. This leads to the situation that Headless Service clients are able to connect to pods by trying to reach services' DNS name - this is useful when the applications are aware of the pods to which they want to connect.
+
+# Persistent Storage
+
+Kubernetes containers are built as immutable objects which measn that each time the container stops the information inside is lost. But there can be use cases when the data has to be stored persistently. So, K8S Persistent Storage gives ability to the applications to request, and consume, storage resources even after containers shut down. The Persistent storage includes volumes which live inside some Kubernetes cluster. However, they are able to outlive other pods to access information in a long-term.
