--- a/k8s/11.md
+++ b/k8s/11.md
@@ -25,3 +25,7 @@
 ![helm ls](../screenshots/printenv.png)
 
 ![helm ls](../screenshots/helm-pods-secret.png)
+
+# Bonus - Create env variable
+
+![env](../screenshots/addenv.png)
